--- a/studybud/templates/main.html
+++ b/studybud/templates/main.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudyBud</title>
+    {% block style %}
+
+    {% endblock %}
 </head>
 <body>
     {% include 'navbar.html' %}
