--- a/studybud/templates/navbar.html
+++ b/studybud/templates/navbar.html
@@ -1,4 +1,18 @@
-<a href="/base">
+<a href="{% url 'home' %}">
     <h1>Logo</h1>
-    <hr>
 </a>
+<hr>
+<div>
+    <form action="{% url 'home' %}" method="get">
+        <input type="text" name="q" placeholder="Search Rooms...">
+    </form>
+</div>
+
+<div>
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+    {% endif%}
+    
+</div>
