--- a/studybud/base/static/base/home.css
+++ b/studybud/base/static/base/home.css
@@ -1,4 +1,4 @@
-.home-container {
+.home-container, .profile-container {
     display: flex;
     flex-direction: row;
 }
@@ -9,4 +9,8 @@
 
 .rooms {
     flex: 3 3 auto;
+}
+
+.recent-activity {
+    flex: 1 1 auto;
 }
