--- a/studybud/base/templates/base/login_register.html
+++ b/studybud/base/templates/base/login_register.html
@@ -1,22 +1,49 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<div>
-    <form action="" method="post">
-        {% csrf_token %}
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" placeholder="Enter Username">
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" placeholder="Enter Password">
-        <input type="submit" value="Login">
-    </form>
 
-    {% if messages %}
-    <ul class = "messages">
-        {% for message in messages %}
-            <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-</div>
+{% if page == 'login' %}
+    <div>
+        <form action="" method="post">
+            {% csrf_token %}
+            <label for="username">Username:</label>
+            <input type="text" name="username" id="username" placeholder="Enter Username">
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" placeholder="Enter Password">
+            <input type="submit" value="Login">
+        </form>
+
+        {% if messages %}
+        <ul class = "messages">
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
+        <p>Haven't signed up yet?</p>
+        <a href="{% url 'register' %}">Sign Up</a>
+    </div>
+
+{% else %}
+
+    <div>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Sign Up">
+        </form>
+
+        {% if messages %}
+        <ul class = "messages">
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
+        <p>Already Signed Up?</p>
+        <a href="{% url 'login' %}">Log In</a>
+    </div>
+{% endif %}
 {% endblock content %}
