--- a/studybud/base/templates/base/profile.html
+++ b/studybud/base/templates/base/profile.html
@@ -1,22 +1,21 @@
 {% extends 'main.html' %}
 
-{% load static%}
+{% load static %}
 {% block style %}
     <link rel="stylesheet" href="{% static 'base/home.css' %}">
 {% endblock style %}
 
 {% block content %}
 
-<div class="home-container">
+<h1>@{{ user }}</h1>
+<a href="{% url 'update-profile' %}">Edit</a>
 
+<div class="profile-container">
     <div class="browse">
         {% include 'base/topic_component.html' %}
     </div>
 
     <div class="rooms">
-        <h5>{{room_count}} rooms available</h5>
-        <a href="{% url 'create-room'%}">Create Room</a>
-
         {% include 'base/feed_component.html' %}
     </div>
 
@@ -24,6 +23,5 @@
         {% include 'base/activity_component.html' %}
     </div>
 </div>
-
 
 {% endblock content %}
