--- a/studybud/base/templates/base/room.html
+++ b/studybud/base/templates/base/room.html
@@ -1,8 +1,54 @@
 {% extends 'main.html' %}
 
-{% block content %}
-<h1>Room Template</h1>
+{% load static %}
+{% block style %}
+    <link rel="stylesheet" href="{% static 'base/room.css' %}">
+{% endblock style %}
 
-<p>Room Desc : {{ room.description }}</p>
+{% block content %}
+<div class="room-container">
+    <div class="comments">
+        <h1>{{ room.name }}</h1>
+
+        <p>{{ room.description }}</p>
+
+        <div class="comment-wrapper">
+            <h3>Conversation</h3>
+            <hr>
+            {% for message in messages%}
+                <div>
+                    <small><a href="{% url 'profile' message.user.id %}">@{{message.user}}</a>{{message.created|timesince}} ago</small>
+                    <p>{{message.body}}</p>
+                    {% if request.user == message.user %}
+                        <a href="{% url 'delete-message' message.id %}">Delete</a>
+                    {% endif %}
+                    <hr>
+                </div>
+            {% endfor %}
+        </div>
+
+        {% if request.user.is_authenticated %}
+        <div class="comment-form">
+            <form action="" method="POST">
+                {% csrf_token %}
+                <input type="text" name="body" id="" placeholder="Write your message here...">
+            </form>
+        </div>
+        {% endif %}
+    </div>
+
+    <div class="participants">
+        <h1>Participants</h1>
+        <hr>
+        <ul>
+            {% for participant in participants%}
+                <li>@{{participant.username}}</li>
+            {% endfor %}
+        </ul>
+    </div>
+
+</div>
+
+
 
 {% endblock content %}
